<resources>
    <string name="app_name">Hearing Phone</string>
    <string name="adjust_frequency">Adjust Frequency: %1$d %2$s</string>
    <string name="frequency_adjust_instructions">Use the slider until you can hear the tone comfortably.</string>
    <string name="next_step_for_button"><![CDATA[Next Step >]]></string>
    <string name="volume_with_value">Volume: %1$d</string>

    <string name="preset_file_name">Preset_v1.txt</string>
    <string name="device_info_file_name">DeviceInfo_v1.txt</string>
    <string name="preferences_file_name">Preferences_v1.txt</string>

    <string name="our_pin">Our PIN: %1$d</string>
    <string name="play_stop_playing_what_the_phone_hears">Play/stop playing what the phone hears</string>
    <string name="make_this_phone_discoverable_by_other_phones">Connect to another phone</string>
    <string name="start_stop_sending_audio">Start/stop sending audio</string>
    <string name="adjust_the_volume_until_you_can_hear_tone_s_comfortably">Adjust the volume until you can hear tone(s) comfortably.</string>
    <string name="play_stop_playing_the_sounds">Play/stop playing the sounds</string>
    <string name="increase_volume">Increase volume</string>
    <string name="decrease_volume">Decrease volume</string>
    <string name="play_stop_playing_the_tone">Play/stop playing the tone</string>
    <string name="title_activity_tabbed_main">Hearing Phone</string>
    <string name="action_settings">Settings</string>

    <string name="using_phone_mic">Using phone mic</string>
    <string name="using_headset_mic">Using headset mic</string>

    <string name="not_connected">Not connected</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected!</string>

    <string name="no_preset_selected">No preset selected</string>

    <string name="headphones_not_connected">Please insert/connect headphones before listening. Otherwise you\'ll get a horrible screeching noise. :)</string>
    <string name="headphones_needed">Please plug in/connect headphones first.</string>
    <string name="switch_between_phone_microphone_and_headset_microphone">Switch between phone microphone and headset microphone</string>
    <string name="manage_sound_presets">Manage sound presets</string>
    <string name="listen">Listen</string>
    <string name="speak">Speak</string>
    <string name="reconnect">Reconnect</string>
    <string name="new_connection">New Connection</string>
    <string name="closeX">X</string>
    <string name="delete_this_preset">Delete this preset</string>
    <string name="new_preset">New Preset</string>
    <string name="welcome_to_hearing_phone">Welcome to Hearing Phone!</string>
    <string name="let_s_get_you_started">Let\'s get you started</string>
    <string name="there_are_2_tabs">There are 2 tabs:</string>
    <string name="listen_colon">Listen:</string>
    <string name="listen_to_what_the_phone_hears">Listen to what the phone hears PLUS what another phone sends you</string>
    <string name="speak_colon">Speak:</string>
    <string name="send_sound_to_another_phone_fm_style">Send sound to another phone (FM style)</string>
    <string name="here_are_the_buttons">Here are the buttons</string>
    <string name="start_stop">Start/stop</string>
    <string name="microphone_button">Microphone button</string>
    <string name="switch_between_phone_mic_and_headset_mic">Switch between phone mic and headset mic</string>
    <string name="phone_to_phone_button">Phone to phone button</string>
    <string name="listen_for_connections_from_another_phone_either_make_a_new_connection_or_listen_for_an_existing_one">Listen for connections from another phone (either make a new connection or listen for an existing one)</string>
    <string name="presets_button">Presets button</string>
    <string name="customize_what_you_hear">Customize what you hear to your hearing needs, phone, and headphones</string>

</resources>
