<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="peterson.ttu.edu.backupaids.activities.ListenFragment">

    <TextView
        android:id="@+id/ourPinTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/our_pin"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/listenSpace"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <!-- Space so that the ImageButton has something to anchor on when the TextView is invisible -->
    <android.support.v4.widget.Space
        android:id="@+id/listenSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ourPinTextView"
        app:layout_constraintBottom_toTopOf="@id/playSound"/>

    <ImageButton
        android:id="@+id/playSound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_power_button_blue"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/listenSpace"
        app:layout_constraintBottom_toTopOf="@id/bottomMenu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/play_stop_playing_what_the_phone_hears" />

    <!-- Bottom quick settings -->
    <TableLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f5f5f5"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@id/playSound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow>
            <ImageButton
                android:id="@+id/micToUseButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_phone_mic_blue"
                android:contentDescription="@string/switch_between_phone_microphone_and_headset_microphone"/>
            <ImageButton
                android:id="@+id/makeDiscoverable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:contentDescription="@string/make_this_phone_discoverable_by_other_phones"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_phone_in_gray"/>
            <ImageButton
                android:id="@+id/presetChooser"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:contentDescription="@string/manage_sound_presets"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_equalizer"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/micToUseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/using_phone_mic"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
            <TextView
                android:id="@+id/textForMakeDiscoverableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_connected"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
            <TextView
                android:id="@+id/textForPresetChooser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_preset_selected"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
