<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/volumeSettingLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="peterson.ttu.edu.backupaids.activities.headsetSetup.VolumeSetFragment">

    <TextView
        android:id="@+id/stepInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/volumeTestPlaySounds"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/adjust_the_volume_until_you_can_hear_tone_s_comfortably" />

    <ImageButton
        android:id="@+id/volumeTestPlaySounds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_power_button_blue"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/volumeSettingsVolumeUp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepInfo"
        app:layout_constraintWidth_default="wrap"
        android:contentDescription="@string/play_stop_playing_the_sounds" />

    <TextView
        android:id="@+id/volumeLabelWithAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_with_value"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/volumeSettingNextStep"
        app:layout_constraintBottom_toBottomOf="@id/volumeSettingNextStep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/volumeSettingsVolumeUp"/>

    <ImageButton
        android:id="@+id/volumeSettingsVolumeUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/arrow_up_float"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/volumeSettingNextStep"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toRightOf="@+id/volumeLabelWithAmount"
        app:layout_constraintRight_toLeftOf="@id/volumeSettingsVolumeDown"
        app:layout_constraintTop_toTopOf="@+id/volumeSettingNextStep"
        android:contentDescription="@string/increase_volume" />

    <ImageButton
        android:id="@+id/volumeSettingsVolumeDown"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/arrow_down_float"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/volumeSettingNextStep"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintRight_toLeftOf="@id/volumeSettingNextStep"
        app:layout_constraintLeft_toRightOf="@id/volumeSettingsVolumeUp"
        app:layout_constraintTop_toTopOf="@+id/volumeSettingNextStep"
        android:contentDescription="@string/decrease_volume" />

    <Button
        android:id="@+id/volumeSettingNextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step_for_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/volumeTestPlaySounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/volumeSettingsVolumeDown"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
