<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="peterson.ttu.edu.backupaids.headsetSetup.FrequencyAdjustFragment">

    <TextView
        android:id="@+id/frequencyAdjustTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_frequency"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frequencyAdjustInfoText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/frequencyAdjustInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency_adjust_instructions"
        app:layout_constraintTop_toBottomOf="@+id/frequencyAdjustTitle"
        app:layout_constraintBottom_toTopOf="@+id/frequencyAdjustPlaySounds"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/frequencyAdjustPlaySounds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:scaleType="fitCenter"
        android:src="@drawable/power_button_blue2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/frequencyAdjustInfoText"
        app:layout_constraintBottom_toTopOf="@+id/frequencyAdjustNextStep"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <SeekBar
        android:id="@+id/frequencyAdjustSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="3000"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/frequencyAdjustNextStep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/frequencyAdjustNextStep"
        app:layout_constraintTop_toTopOf="@id/frequencyAdjustNextStep"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/frequencyAdjustNextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step_for_button"
        app:layout_constraintTop_toBottomOf="@+id/frequencyAdjustPlaySounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/frequencyAdjustSlider"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
